<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_voice_chat_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.agora.tutorials1v1acall.VoiceChatViewActivity">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginView"
        android:visibility="visible"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="@dimen/textview_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/app_id_string"
            >
        </TextView>
        <EditText
            android:id="@+id/app_id_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/token_string"
            >
        </TextView>
        <EditText
            android:id="@+id/token_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/channel_string"
            >
        </TextView>
        <EditText
            android:id="@+id/channel_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/user_id_string"
            >
        </TextView>
        <EditText
            android:id="@+id/user_id_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/join_string"
                android:onClick="onJoinButtonClicked">
            </Button>
            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:text="@string/leave_string"
                android:visibility="gone"
                android:onClick="onLeaveButtonClicked">
            </Button>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/use_tip"
            >
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/xSwitchLoginView"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="@dimen/textview_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/login_name_string"
            >
        </TextView>
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/password_string"
            >
        </TextView>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/domain_string"
            >
        </TextView>
        <EditText
            android:id="@+id/domain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/token_string"
            >
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/token_text"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            >
        </TextView>
        <Button
            android:id="@+id/xSwitchLoginButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/login_string"
            android:onClick="onLoginButtonClicked"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            >
        </Button>
        <TextView
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/dest_number_string"
            >
        </TextView>
        <EditText
            android:id="@+id/sipNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin">
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <Button
                android:id="@+id/xSwitchCallButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/call_string"
                android:enabled="false"
                android:onClick="onCallButtonClicked"
                >
            </Button>
            <Button
                android:id="@+id/xSwitchHangUpButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:text="@string/hang_up_string"
                android:enabled="false"
                android:onClick="onHangUpButtonClicked">
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/callingView"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_user"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:id="@+id/remote_user"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:id="@+id/quick_tips_when_use_agora_sdk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark"
            android:gravity="center_vertical|start"
            android:text="1. Waiting for remote users\n2. This demo only supports 1v1 voice calling" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:onClick="onLocalAudioMuteClicked"
                android:scaleType="centerInside"
                android:src="@drawable/btn_mute" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:onClick="onSwitchSpeakerphoneClicked"
                android:scaleType="centerInside"
                android:src="@drawable/btn_speaker" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:onClick="onEncCallClicked"
                android:scaleType="centerInside"
                android:src="@drawable/btn_end_call" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
